crates/test-ui/ui/nsarray_bound_not_send_sync.stderr
error[E0277]: `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>` cannot be shared between threads safely
 --> ui/nsarray_bound_not_send_sync.rs
  |
  |     needs_sync::<NSArray<Object>>();
  |                  ^^^^^^^^^^^^^^^ `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>` cannot be shared between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Sync` is not implemented for `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `Object`
  = note: required for `NSArray` to implement `Sync`
note: required by a bound in `needs_sync`
 --> ui/nsarray_bound_not_send_sync.rs
  |
  | fn needs_sync<T: ?Sized + Sync>() {}
  |                           ^^^^ required by this bound in `needs_sync`

error[E0277]: `*const UnsafeCell<()>` cannot be sent between threads safely
 --> ui/nsarray_bound_not_send_sync.rs
  |
  |     needs_sync::<NSArray<Object>>();
  |                  ^^^^^^^^^^^^^^^ `*const UnsafeCell<()>` cannot be sent between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Send` is not implemented for `*const UnsafeCell<()>`
  = note: required because it appears within the type `(*const UnsafeCell<()>, PhantomPinned)`
  = note: required because it appears within the type `PhantomData<(*const UnsafeCell<()>, PhantomPinned)>`
  = note: required because it appears within the type `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `Object`
  = note: required for `NSArray` to implement `Sync`
note: required by a bound in `needs_sync`
 --> ui/nsarray_bound_not_send_sync.rs
  |
  | fn needs_sync<T: ?Sized + Sync>() {}
  |                           ^^^^ required by this bound in `needs_sync`

error[E0277]: `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>` cannot be shared between threads safely
 --> ui/nsarray_bound_not_send_sync.rs
  |
  |     needs_send::<NSArray<Object>>();
  |                  ^^^^^^^^^^^^^^^ `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>` cannot be shared between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Sync` is not implemented for `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `Object`
  = note: required for `NSArray` to implement `Send`
note: required by a bound in `needs_send`
 --> ui/nsarray_bound_not_send_sync.rs
  |
  | fn needs_send<T: ?Sized + Send>() {}
  |                           ^^^^ required by this bound in `needs_send`

error[E0277]: `*const UnsafeCell<()>` cannot be sent between threads safely
 --> ui/nsarray_bound_not_send_sync.rs
  |
  |     needs_send::<NSArray<Object>>();
  |                  ^^^^^^^^^^^^^^^ `*const UnsafeCell<()>` cannot be sent between threads safely
  |
  = help: within `objc2::runtime::Object`, the trait `Send` is not implemented for `*const UnsafeCell<()>`
  = note: required because it appears within the type `(*const UnsafeCell<()>, PhantomPinned)`
  = note: required because it appears within the type `PhantomData<(*const UnsafeCell<()>, PhantomPinned)>`
  = note: required because it appears within the type `UnsafeCell<PhantomData<(*const UnsafeCell<()>, PhantomPinned)>>`
  = note: required because it appears within the type `objc_object`
  = note: required because it appears within the type `Object`
  = note: required for `NSArray` to implement `Send`
note: required by a bound in `needs_send`
 --> ui/nsarray_bound_not_send_sync.rs
  |
  | fn needs_send<T: ?Sized + Send>() {}
  |                           ^^^^ required by this bound in `needs_send`
